WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
50792
Cannot use NSKeyedArchiver in WK2 for ResourceResponses
https://bugs.webkit.org/show_bug.cgi?id=50792
Summary
Cannot use NSKeyedArchiver in WK2 for ResourceResponses
Anders Carlsson
Reported
2010-12-09 17:39:12 PST
Cannot use NSKeyedArchiver in WK2 for ResourceResponses
Attachments
Patch
(105.25 KB, patch)
2010-12-09 17:48 PST
,
Anders Carlsson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2010-12-09 17:39:55 PST
<
rdar://problem/8741799
>
Anders Carlsson
Comment 2
2010-12-09 17:48:32 PST
Created
attachment 76146
[details]
Patch
Anders Carlsson
Comment 3
2010-12-09 17:58:23 PST
Committed
r73668
: <
http://trac.webkit.org/changeset/73668
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug