Cannot use NSKeyedArchiver in WK2 for ResourceResponses https://bugs.webkit.org/show_bug.cgi?id=50792 <rdar://problem/8741799>

Reviewed by Sam Weinig.

WebKit2:

When encoding, first convert the requests and responses to the serializable dictionary representation
and use the newly added CF CoreIPC encoders. When decoding, do the opposite.

* Shared/mac/WebCoreArgumentCodersMac.mm:
(CoreIPC::encodeResourceRequest):
(CoreIPC::decodeResourceRequest):
(CoreIPC::encodeResourceResponse):
(CoreIPC::decodeResourceResponse):

WebKitLibraries:

* WebKitSystemInterface.h:
* libWebKitSystemInterfaceLeopard.a:
* libWebKitSystemInterfaceSnowLeopard.a:

Canonical link: https://commits.webkit.org/64075@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73668 268f45cc-cd09-0410-ab3c-d52691b4dbfc