WebKit2/Shared/mac/WebCoreArgumentCodersMac.mm
@@ -25,32 +25,24 @@
 
 #include "WebCoreArgumentCoders.h"
 
+#include "ArgumentCodersCF.h"
+#include "WebKitSystemInterface.h"
+
 namespace CoreIPC {
-
-static void encodeWithNSKeyedArchiver(ArgumentEncoder* encoder, id rootObject)
-{
-    NSData *data = [NSKeyedArchiver archivedDataWithRootObject:rootObject];
-    encoder->encodeBytes(static_cast<const uint8_t*>([data bytes]), [data length]);
-}
-
-static id decodeWithNSKeyedArchiver(ArgumentDecoder* decoder)
-{
-    Vector<uint8_t> bytes;
-    if (!decoder->decodeBytes(bytes))
-        return nil;
-
-    RetainPtr<NSData> nsData(AdoptNS, [[NSData alloc] initWithBytesNoCopy:bytes.data() length:bytes.size() freeWhenDone:NO]);
-    return [NSKeyedUnarchiver unarchiveObjectWithData:nsData.get()];
-}
 
 void encodeResourceRequest(ArgumentEncoder* encoder, const WebCore::ResourceRequest& resourceRequest)
 {
-    encodeWithNSKeyedArchiver(encoder, resourceRequest.nsURLRequest());
+    RetainPtr<CFDictionaryRef> dictionary(AdoptCF, WKNSURLRequestCreateSerializableRepresentation(resourceRequest.nsURLRequest(), CoreIPC::tokenNullTypeRef()));
+    encode(encoder, dictionary.get());
 }
 
 bool decodeResourceRequest(ArgumentDecoder* decoder, WebCore::ResourceRequest& resourceRequest)
 {
-    NSURLRequest *nsURLRequest = decodeWithNSKeyedArchiver(decoder);
+    RetainPtr<CFDictionaryRef> dictionary;
+    if (!decode(decoder, dictionary))
+        return false;
+
+    NSURLRequest *nsURLRequest = WKNSURLRequestFromSerializableRepresentation(dictionary.get(), CoreIPC::tokenNullTypeRef());
     if (!nsURLRequest)
         return false;
 
@@ -62,24 +54,33 @@ void encodeResourceResponse(ArgumentEncoder* encoder, const WebCore::ResourceRes
 {
     bool responseIsPresent = resourceResponse.nsURLResponse();
     encoder->encode(responseIsPresent);
-    
-    // FIXME: <rdar://problem/8741799> - We can't use NSKeyedArchiver here.
-    encodeWithNSKeyedArchiver(encoder, resourceResponse.nsURLResponse());
+
+    if (!responseIsPresent)
+        return;
+
+    RetainPtr<CFDictionaryRef> dictionary(AdoptCF, WKNSURLResponseCreateSerializableRepresentation(resourceResponse.nsURLResponse(), CoreIPC::tokenNullTypeRef()));
+    encode(encoder, dictionary.get());
 }
 
 bool decodeResourceResponse(ArgumentDecoder* decoder, WebCore::ResourceResponse& resourceResponse)
 {
     bool responseIsPresent;
     decoder->decode(responseIsPresent);
-    
-    // FIXME: <rdar://problem/8741799> - We can't use NSKeyedArchiver here.
-    NSURLResponse *nsURLResponse = decodeWithNSKeyedArchiver(decoder);
-    if (responseIsPresent && !nsURLResponse)
+
+    if (!responseIsPresent) {
+        resourceResponse = WebCore::ResourceResponse();
+        return true;
+    }
+
+    RetainPtr<CFDictionaryRef> dictionary;
+    if (!decode(decoder, dictionary))
         return false;
 
-    if (responseIsPresent)
-        resourceResponse = WebCore::ResourceResponse(nsURLResponse);
+    NSURLResponse* nsURLResponse = WKNSURLResponseFromSerializableRepresentation(dictionary.get(), CoreIPC::tokenNullTypeRef());
+    if (!nsURLResponse)
+        return false;
 
+    resourceResponse = WebCore::ResourceResponse(nsURLResponse);
     return true;
 }
 
